src/objects/NotificationMessage__mdt.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpURL__c</fullName>
        <label>Help URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Notification Message</label>
    <pluralLabel>Notification Messages</pluralLabel>
</CustomObject>